@@ -10,7 +10,7 @@ public class RemoveResult {
 
     public void removeResult(){
         if(!calculation.getResults().isEmpty()){
-            System.out.println("삭제된 값: " + calculation.getResults().remove(0));
+            System.out.println("삭제된 값: " + calculation.getResults().removeFirst());
             for (int i = 0; i < calculation.getResults().size(); i++) {
                 System.out.println((i + 1) + "번째 결과 값 : "+ calculation.getResults().get(i));
             }
